<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/login_register_btn"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorWhite"
        android:text="@string/login_register"/>

    <TextView
        android:id="@+id/login_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_below="@id/login_register_btn"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/login_title"/>

    <EditText
        android:id="@+id/login_account_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title_tv"
        android:layout_alignRight="@id/login_register_btn"
        android:layout_alignLeft="@id/login_title_tv"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:hint="@string/login_account"/>

    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_account_edit"
        android:layout_alignRight="@id/login_register_btn"
        android:layout_alignLeft="@id/login_title_tv"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:hint="@string/login_password"/>

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_edit"
        android:layout_alignRight="@id/login_register_btn"
        android:layout_alignLeft="@id/login_title_tv"
        android:layout_marginTop="30dp"
        android:padding="13dp"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        android:text="@string/login_login"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/login_change_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_login_btn"
        android:layout_alignLeft="@id/login_title_tv"
        android:layout_marginTop="18dp"
        android:textSize="18dp"
        android:text="@string/login_change"/>

    <TextView
        android:id="@+id/login_forget_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_login_btn"
        android:layout_alignRight="@id/login_register_btn"
        android:layout_marginTop="18dp"
        android:textSize="18dp"
        android:text="@string/login_forget"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/login_register_btn"
        android:layout_alignLeft="@id/login_title_tv"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/login_decrete_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:textSize="18dp"
            android:text="@string/login_decrete"/>

        <ImageView
            android:id="@+id/login_weixinlogo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_decrete_tv"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="100dp"
            android:src="@mipmap/weixinlogo"/>

        <ImageView
            android:id="@+id/login_youkulogo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_decrete_tv"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="100dp"
            android:src="@mipmap/youkelogo"/>

        <TextView
            android:id="@+id/login_weixin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_weixinlogo_img"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="100dp"
            android:text="@string/login_weixin"/>

        <TextView
            android:id="@+id/login_youke_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_youkulogo_img"
            android:layout_alignParentRight="true"
            android:layout_marginRight="100dp"
            android:text="@string/login_youke"/>

        <LinearLayout
            android:id="@+id/login_phone_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_weixin_tv"
            android:layout_centerInParent="true"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/phonelogo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:textColor="@color/colorLightBlack"
                android:textStyle="italic"
                android:text="400-800-900"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_phone_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightBlack"
                android:textSize="13dp"
                android:text="@string/login_bottom_urge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightBlue"
                android:layout_marginLeft="1dp"
                android:textSize="13dp"
                android:text="@string/login_bottom_agreement"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>