<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/frag_huapeng_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:padding="10dp"
        android:text="@string/main_huapeng"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buguang_btn"
        style="@style/Custom_huapeng_floatingbtn"
        android:layout_below="@id/frag_huapeng_title"
        android:layout_toStartOf="@id/jiaoshui_btn"
        android:layout_marginRight="50dp"
        android:src="@mipmap/huapeng_buguang"
        app:fabSize="mini"/>

    <TextView
        style="@style/Custom_huapeng_floatingbtn_text"
        android:layout_below="@id/buguang_btn"
        android:layout_alignLeft="@id/buguang_btn"
        android:gravity="center_horizontal"
        android:text="@string/frag_huapeng_buguang"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/jiaoshui_btn"
        style="@style/Custom_huapeng_floatingbtn"
        android:layout_below="@id/frag_huapeng_title"
        android:layout_centerInParent="true"
        android:src="@mipmap/huapeng_jiaoshui"
        app:fabSize="mini"/>

    <TextView
        style="@style/Custom_huapeng_floatingbtn_text"
        android:layout_below="@id/jiaoshui_btn"
        android:layout_alignLeft="@id/jiaoshui_btn"
        android:gravity="center_horizontal"
        android:text="@string/frag_huapeng_jiaoshui"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/baogao_btn"
        style="@style/Custom_huapeng_floatingbtn"
        android:layout_below="@id/frag_huapeng_title"
        android:layout_toEndOf="@id/jiaoshui_btn"
        android:layout_marginLeft="50dp"
        android:src="@mipmap/huapeng_baogao"
        app:fabSize="mini"/>

    <TextView
        android:id="@+id/huapeng_baogao_text"
        style="@style/Custom_huapeng_floatingbtn_text"
        android:layout_below="@id/baogao_btn"
        android:layout_alignLeft="@id/baogao_btn"
        android:gravity="center_horizontal"
        android:text="@string/frag_huapeng_baogao"/>

    <ImageView
        android:id="@+id/huapeng_pic"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_below="@+id/huapeng_baogao_text"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/huapeng_whiterose"/>

    <Button
        android:id="@+id/huapeng_first_btn"
        style="@style/Custom_huapeng_flower_btn"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/huapeng_pic"
        android:text="@string/frag_huapeng_junzilan"/>

    <Button
        android:id="@+id/huapeng_second_btn"
        style="@style/Custom_huapeng_flower_btn"
        android:layout_toStartOf="@id/huapeng_first_btn"
        android:layout_below="@+id/huapeng_pic"
        android:layout_marginRight="10dp"
        android:text="@string/frag_huapeng_baimeigui"/>

    <Button
        android:id="@+id/huapeng_third_btn"
        style="@style/Custom_huapeng_flower_btn"
        android:layout_below="@+id/huapeng_pic"
        android:layout_toEndOf="@id/huapeng_first_btn"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorLightBlack"
        android:text="@string/frag_huapeng_kangnaixin"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/huapeng_pic"
        android:layout_alignRight="@id/huapeng_pic"
        android:layout_below="@id/huapeng_first_btn"
        android:layout_marginTop="20dp"
        android:background="@drawable/huapeng_item_list">

        <TextView
            android:id="@+id/huapeng_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/frag_huapeng_jiance"/>

        <TextView
            android:id="@+id/huapeng_data_hjTemp"
            style="@style/Custom_huapeng_data_name"
            android:layout_below="@id/huapeng_list_title"
            android:text="@string/frag_huapeng_huangjingwnedu"/>

        <TextView
            android:id="@+id/huapeng_data_hjTemp_value"
            style="@style/Custom_huapeng_data_value"
            android:layout_toEndOf="@id/huapeng_data_hjTemp"
            android:layout_alignTop="@id/huapeng_data_hjTemp"
            android:text="27.8度"/>

        <ImageView
            android:id="@+id/huapeng_data_hjTemp_pic"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_toStartOf="@id/huapeng_data_hjTemp"
            android:layout_marginRight="45dp"
            android:src="@mipmap/hjtemppic"
            android:layout_alignTop="@id/huapeng_data_hjTemp"/>

        <TextView
            android:id="@+id/huapeng_data_hjHumi"
            style="@style/Custom_huapeng_data_name"
            android:layout_below="@id/huapeng_data_hjTemp"
            android:text="@string/frag_huapeng_huangjingshidu"/>

        <TextView
            android:id="@+id/huapeng_data_hjHumi_value"
            style="@style/Custom_huapeng_data_value"
            android:layout_toEndOf="@id/huapeng_data_hjHumi"
            android:layout_alignTop="@id/huapeng_data_hjHumi"
            android:text="69.0%"/>

        <ImageView
            style="@style/Custom_huapeng_data_image"
            android:src="@mipmap/hjhumipic"
            android:layout_alignTop="@id/huapeng_data_hjHumi"/>

        <TextView
            android:id="@+id/huapeng_data_trHumi"
            style="@style/Custom_huapeng_data_name"
            android:layout_below="@id/huapeng_data_hjHumi"
            android:text="@string/frag_huapeng_turangshidu"/>

        <TextView
            android:id="@+id/huapeng_data_trHumi_value"
            style="@style/Custom_huapeng_data_value"
            android:layout_toEndOf="@id/huapeng_data_trHumi"
            android:layout_alignTop="@id/huapeng_data_trHumi"
            android:text="59.53%"/>

        <ImageView
            style="@style/Custom_huapeng_data_image"
            android:src="@mipmap/trhumipic"
            android:layout_alignTop="@id/huapeng_data_trHumi"/>

        <TextView
            android:id="@+id/huapeng_data_ph"
            style="@style/Custom_huapeng_data_name"
            android:layout_below="@id/huapeng_data_trHumi"
            android:text="@string/frag_huapeng_ph"/>

        <TextView
            android:id="@+id/huapeng_data_ph_value"
            style="@style/Custom_huapeng_data_value"
            android:layout_toEndOf="@id/huapeng_data_ph"
            android:layout_alignTop="@id/huapeng_data_ph"
            android:text="6.2"/>

        <ImageView
            style="@style/Custom_huapeng_data_image"
            android:src="@mipmap/phpic"
            android:layout_alignTop="@id/huapeng_data_ph"/>

        <TextView
            android:id="@+id/huapeng_data_co2"
            style="@style/Custom_huapeng_data_name"
            android:layout_below="@id/huapeng_data_ph"
            android:layout_marginBottom="20dp"
            android:text="@string/frag_huapeng_co2"/>

        <TextView
            android:id="@+id/huapeng_data_co2_value"
            style="@style/Custom_huapeng_data_value"
            android:layout_toEndOf="@id/huapeng_data_co2"
            android:layout_alignTop="@id/huapeng_data_co2"
            android:text="0.04%"/>

        <ImageView
            style="@style/Custom_huapeng_data_image"
            android:src="@mipmap/co2pic"
            android:layout_alignTop="@id/huapeng_data_co2"/>
    </RelativeLayout>


</RelativeLayout>